--- a/WebApi/src/main/resources/application.properties
+++ b/WebApi/src/main/resources/application.properties
@@ -3,3 +3,13 @@ spring.datasource.username=FA_ADMIN
 spring.datasource.password=FA_ADMIN
 
 spring.jpa.hibernate.ddl-auto=update
+
+server.ssl.key-store=classpath:springboot.p12
+server.ssl.key-store-password = password
+server.ssl.key-store-type = pkcs12
+server.ssl.key-alias = springboot
+server.ssl.key-password = password
+server.port = 8443
+
+security.oauth2.client.client-id = 39d2835b-1f87-4a77-9798-e2975f36972e
+security.oauth2.client.client-secret = f1463f8b-0791-46fe-9269-521b86c55b71
