--- a/WebApi/src/main/resources/application.properties
+++ b/WebApi/src/main/resources/application.properties
@@ -4,12 +4,11 @@ spring.datasource.password=FA_ADMIN
 
 spring.jpa.hibernate.ddl-auto=update
 
-server.ssl.key-store=classpath:springboot.p12
+jwt.secret=secret
+
+server.ssl.key-store=classpath:baeldung.p12
 server.ssl.key-store-password = password
 server.ssl.key-store-type = pkcs12
-server.ssl.key-alias = springboot
+server.ssl.key-alias = baeldung
 server.ssl.key-password = password
 server.port = 8443
-
-security.oauth2.client.client-id = 39d2835b-1f87-4a77-9798-e2975f36972e
-security.oauth2.client.client-secret = f1463f8b-0791-46fe-9269-521b86c55b71
