--- a/WebApi/src/main/resources/application.properties
+++ b/WebApi/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:oracle:thin:@//WIN-0U250SFBS5D:1521/FilmsAbout
-spring.datasource.username=FA_ADMIN
-spring.datasource.password=FA_ADMIN
+spring.datasource.username=FA_USER
+spring.datasource.password=FA_USER
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 jwt.secret=secret
 
@@ -12,3 +12,10 @@ server.ssl.key-store-type = pkcs12
 server.ssl.key-alias = baeldung
 server.ssl.key-password = password
 server.port = 8443
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= *******************
+spring.mail.password= *************
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
