--- a/web-site/package.json
+++ b/web-site/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@agney/react-loading": "^0.1.2",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.1.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -22,6 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.0.0",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-rounded-image": "^2.0.13",
